Add contact information

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@ This is the Admin creating an index file for tom and jerry
 
 This is Tom adding Navigation to the AI website 
 
-Thank you	
+Thank you
+
+This is my contribution to this project. Jerry....Drops MIC
+
+Peace OUTTTTT	
